k8s/sidecar.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: testground-sidecar
spec:
  selector:
    matchLabels:
      name: testground-sidecar
  template:
    metadata:
      labels:
        name: testground-sidecar
    spec:
      terminationGracePeriodSeconds: 10
      hostPID: true
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: testground-sidecar
        image: iptestground/sidecar:edge
        imagePullPolicy: Always
        command: ["testground"]
        args: ["sidecar", "--runner", "k8s"]
        securityContext:
          capabilities:
            add: ["NET_ADMIN", "SYS_ADMIN", "SYS_TIME"]
          privileged: true
        ports:
        - name: sidecarhttp
          containerPort: 6060
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
          - name: dockersock
            mountPath: "/var/run/docker.sock"
          - name: cnibin
            mountPath: "/host/opt/cni/bin"
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
      - name: cnibin
        hostPath:
          path: /opt/cni/bin
      nodeSelector:
        testground.node.role.plan: "true"
