k8s/ingress-grafana.yml
  apiVersion: networking.k8s.io/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: ci-grafana.testground.ipfs.team
    namespace: default
  spec:
    rules:
      - host: ci-grafana.testground.ipfs.team
        http:
          paths:
            - backend:
                serviceName: prometheus-operator-grafana
                servicePort: 80
              path: /
