k8s/ingress-testground-daemon.yml
  apiVersion: networking.k8s.io/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: ci.testground.ipfs.team
    namespace: default
  spec:
    rules:
      - host: ci.testground.ipfs.team
        http:
          paths:
            - backend:
                serviceName: testground-daemon
                servicePort: 8042
              path: /
